Agregacion de Perfil de Cliente

--- a/cliente/estilo.css
+++ b/cliente/estilo.css
@@ -32,6 +32,8 @@ header nav ul {
     margin: 0;
     padding: 0;
 }
+/*Inicia Codigo de Perfil*/
+/*Termial el codigo de Perfil*/
 
 .nav_items{
     display: flex;
