--- a/cliente/estilo.css
+++ b/cliente/estilo.css
@@ -11,12 +11,12 @@ body {
 }
 
 header{
-    background: url(img/header\ hamburgesa.jpg);
+    background: url(img/fondocli.jpg);
     background-size: cover;
     background-position:center;
-    height: 300px;
+    height: 710px;
     margin: 0;/*Eliminar*/
-    padding: 20px;/*Eliminar*/
+    
 }
 header h1{
     text-align: center;
@@ -38,12 +38,18 @@ header nav ul {
 .nav_items{
     display: flex;
     justify-content: center;
+
+    align-items: center; /* Esto también asegura que los elementos de la lista se centren verticalmente */
+    width: 100%; /* Esto hará que .nav_items ocupe todo el ancho de .nav */
 }
 .nav_link{
     text-decoration: none;
     color: #fff;
     padding: 0 20px;
     text-align: center;
+
+    display: block; /* Esto hará que cada enlace se trate como un bloque, permitiendo que el texto se centre */
+
 }
 .nav_link:hover{
     color: #d9d9d9;
@@ -60,36 +66,16 @@ a:focus{
     z-index: 100;
     padding: 0 20px;
     background-color: rgb(0, 0, 0,0.5);
+
+    display: flex; /* Asegúrate de que .nav sea un contenedor flex */
+    align-items: center; /* Esto centrará los elementos verticalmente */
+    justify-content: center; /* Esto centrará los elementos horizontalmente */
     
     /*max-width: 1100px;
     width: 100%;
     margin: 0 auto;*/
 }
 
-/*
-.nav,
-.nav_item{
-    display: flex;
-    height: 100%;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.nav_logo,
-.nav_link,
-.button{
-    color: #fff;
-}
-
-.nav_item{
-    column-gap: 25px;
-}
-
-.nav_link:hover{
-    color: #d9d9d9;
-}*/
-
-/*termina el codigo*/
 /*------------->USUARIO*/
 .usuario {
     position: fixed; /* Posición fija en la ventana del navegador */
