--- a/InicioSesión/nosotros/style.css
+++ b/InicioSesión/nosotros/style.css
@@ -1,246 +1,290 @@
-/**/
-/*Google Font = Poppins*/
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
-/*Cambiar Tipo de Fuente*/
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&family=Titillium+Web:wght@200;300;400;600;700&display=swap');
 *{
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+    padding:0;
+    font-family: 'Open Sans';
+}
+body {
+    /*background-color: #f67f2b; /* Color de fondo para el cuerpo */
+    overflow-x: hidden; /* Oculta la barra de desplazamiento horizontal */
+    overflow-y: hidden; /* Oculta la barra de desplazamiento vertical */
 }
 
-.success-message {
-    background-color: black; /* Fondo negro */
-    color: lime; /* Color de texto verde fosforescente */
-    font-size: 18px;
-    text-align: center;
-    padding: 10px;
-    border-radius: 5px; /* Esto hará que las esquinas del mensaje sean redondeadas */
-    margin: 0px 0;
-    border: 1px solid #39ff14; /* El borde también será verde fosforescente */    
-}
-
-a{
-    text-decoration: none;
-}
-
-.header{
-    position: absolute;
-    height: 60px;
-    width: 90%;
-    z-index: 100;
-    padding: 0 20px;
-}
-
-.nav{
-    max-width: 1100px;
-    width: 100%;
-    margin: 0 auto;
-}
-
-.nav,
-.nav_item{
-    display: flex;
-    height: 100%;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.nav_logo,
-.nav_link,
-.button{
-    color: #fff;
-}
-
-.home{
-    position: relative;
-    height: 100vh;
-    width: 100%;
-    background-image: url("/nosotros/imgSesión/pexels-rajesh-tp-749235-1600727.jpg");
-    background-position: center;
+header{
+    background: url(img/fondocli.jpg);
     background-size: cover;
+    background-position:center;
+    height: 710px;
+    margin: 0;/*Eliminar*/
+    
 }
-
-.nav_logo{
-    font-size: 25px;
+header h1{
+    text-align: center;
+    font-size: 35px;
+    /* background-color: #000; */
+    color: #fff;
+    padding: 30px 0;
+    margin: 0;/*Eliminar*/
 }
-
-.nav_item{    
-    column-gap: 25px;
+/*inicia el codigo*/
+header nav ul {
+    list-style-type: none; /* Elimina los marcadores de lista*/
+    margin: 0;
+    padding: 0;
 }
+/*Inicia Codigo de Perfil*/
+/*Termial el codigo de Perfil*/
 
+.nav_items{
+    display: flex;
+    justify-content: center;
+
+    align-items: center; /* Esto también asegura que los elementos de la lista se centren verticalmente */
+    width: 100%; /* Esto hará que .nav_items ocupe todo el ancho de .nav */
+}
+.nav_link{
+    text-decoration: none;
+    color: #fff;
+    padding: 0 20px;
+    text-align: center;
+
+    display: block; /* Esto hará que cada enlace se trate como un bloque, permitiendo que el texto se centre */
+
+}
 .nav_link:hover{
     color: #d9d9d9;
 }
 
-.button{
-    padding: 6px 24px;
-    border: 2px solid #fff;
-    background: transparent;
-    border-radius: 6px;
-    cursor: pointer;
-}
-
-.button:active{
-    transform: scale(0.98);
-}
-
-.home::before{
-    content: "";
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-color: rgb(0, 0, 0, 0.6);
-    z-index: 100;
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.5s ease-out;
-}
-
-.home.show::before{
-    opacity: 1;
-    pointer-events: auto;
-}
-
-.form_container{
-    position: fixed;
-    max-width: 320px;
-    width: 100%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1.2);
-    z-index: 101;
-    background: #fff;
-    padding: 25px;
-    border-radius: 12px;
-    box-shadow: rgb(0, 0, 0,0.1);
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.4s ease-out;
-}
-
-.home.show .form_container{
-    opacity: 1;
-    pointer-events: auto;
-    transform: translate(-50%, -50%) scale(1);
-}
-
-.signup_form{
-    display: none;
-}
-
-.form_container.active .signup_form{
-    display: block;
-}
-
-.form_container.active .login_form{
-    display: none;
-}
-
-.form_close{
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    color: #0b0217;
-    opacity: 0.7;
-    cursor: pointer;
-}
-
-.form_container h2{
-    font-size: 22px;
-    color: #0b0217;
-    text-align: center;
-}
-
-.input_box{
-    position: relative;
-    margin-top: 30px;
-    width: 100%;
-    height: 40px;
-}
-
-.input_box input{
-    height: 100%;
-    width: 100%;
-    border: none;
+a:focus{
     outline: none;
-    padding: 0 30px;
-    color: #333;
-    transition: all 0.2s ease;
-    border-bottom: 1.5px solid #aaa;
 }
 
-.input_box input:focus{
-    border-color: #f67f2b;
+.nav{
+    position: relative;
+    height: 60px;
+    width: 100%;
+    z-index: 100;
+    padding: 0 20px;
+    background-color: rgb(0, 0, 0,0.5);
+
+    display: flex; /* Asegúrate de que .nav sea un contenedor flex */
+    align-items: center; /* Esto centrará los elementos verticalmente */
+    justify-content: center; /* Esto centrará los elementos horizontalmente */
+    
+    /*max-width: 1100px;
+    width: 100%;
+    margin: 0 auto;*/
 }
 
-.input_box i{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 20px;
-    color: #707070;
-}
-
-.input_box i.email, 
-.input_box i.password{
-    left: 0;
-}
-
-.input_box input:focus ~ i.email, 
-.input_box input:focus ~ i.password{
-    color: #f67f2b;
-}
-
-.input_box i.pw_hide{
-    right: 0;
-    font-size: 18px;
-    cursor: pointer;
-}
-
-.option_field{
-    margin: 14px;
+/*------------->USUARIO*/
+.usuario {
+    position: fixed; /* Posición fija en la ventana del navegador */
+    top: 20px; /* Alineación en la parte superior */
+    right: 20px; /* Alineación a la derecha */
     display: flex;
     align-items: center;
-    justify-content: space-between;
 }
 
-.form_container a{
-    color: #f67f2b;
-    font-size: 12px;
+.info-usuario {
+    margin-left: 10px; /* Espacio entre la imagen y la información */
 }
 
-.form_container a:hover{
-    text-decoration: underline;
+.nombre,
+.email {
+    display: block; /* Alinea el nombre y el correo electrónico verticalmente */
 }
 
-.checkbox{
+.uil-ellipsis-v {
+    margin-left: 10px; /* Espacio entre la información del usuario y el icono */
+}
+
+.contenedor{
+    max-width: 1200px;
+    padding: 10px;
+    margin: auto;
     display: flex;
-    column-gap: 8px;
-    white-space: nowrap;
+    justify-content: space-between;
+    /* oculto lo que queda fuera del .contenedor */
+    contain: paint;
 }
-
-.checkbox input{
-    accent-color: #f67f2b;
-}
-
-.checkbox label{
-    font-size: 12px;
-    cursor: pointer;
-    user-select: none;
-    color: #0b0217;
-}
-
-.form_container .button{
-    background-color: #f67f2b;
+/* SECCION CONTENEDOR DE ITEMS */
+.contenedor .contenedor-items{
     margin-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    grid-gap:30px;
+    grid-row-gap: 30px;
+    /* width: 60%; */
     width: 100%;
-    padding: 10px 0;
+    transition: .3s;
+}
+.contenedor .contenedor-items .item{
+    max-width: 200px;
+    margin: auto;
+    border: 1px solid #666;
     border-radius: 10px;
+    padding: 20px;
+    transition: .3s;
+}
+.contenedor .contenedor-items .item .img-item{
+    width: 100%;
+}
+.contenedor .contenedor-items .item:hover{
+    box-shadow: 0 0 10px #666;
+    scale: 1.05;
+}
+.contenedor .contenedor-items .item .titulo-item{
+    display: block;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+}
+.contenedor .contenedor-items .item .precio-item{
+    display: block;
+    text-align: center;
+    font-weight: bold;
+    font-size: 22px;
 }
 
-.login_signup{
-    font-size: 12px;
-    text-align: center;
-    margin-top: 15px;
+.contenedor .contenedor-items .item .boton-item{
+    display: block;
+    margin: 10px auto;
+    border: none;
+    background-color: black;
+    color: #fff;
+    padding: 5px 15px;
+    border-radius: 5px;
+    cursor: pointer;
 }
+/* seccion carrito */
+.carrito{
+    border: 1px solid #666;
+    width: 35%;
+    margin-top: 30px;
+    border-radius: 10px;
+    overflow: hidden;
+    margin-bottom: auto;
+    position: sticky !important;
+    top: 0;
+    transition: .3s;
+    /* Estilos para ocultar */
+    margin-right: -100%;
+    opacity: 0;
+}
+.carrito .header-carrito{
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    padding: 30px 0;
+}
+.carrito .carrito-item{
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between; */
+    position: relative;
+    border-bottom: 1px solid #666;
+    padding: 20px;
+}
+.carrito .carrito-item img{
+    margin-right: 20px;
+}
+.carrito .carrito-item .carrito-item-titulo{
+    display: block;
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+.carrito .carrito-item .selector-cantidad{
+    display: inline-block;
+    margin-right: 25px;
+}
+.carrito .carrito-item .carrito-item-cantidad{
+    border: none;
+    font-size: 18px;
+    background-color: transparent;
+    display: inline-block;
+    width:30px;
+    padding: 5px;
+    text-align: center;
+}
+.carrito .carrito-item .selector-cantidad i{
+    font-size: 18px;
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+    text-align: center;
+    border-radius: 50%;
+    border: 1px solid #000;
+    cursor: pointer;
+}
+.carrito .carrito-item .carrito-item-precio{
+    font-weight: bold;
+    display: inline-block;
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+.carrito .carrito-item .btn-eliminar{
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    color: #000;
+    font-size: 20px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+    border: 1px solid #000;
+    cursor: pointer;
+    display: block;
+    background: transparent;
+    z-index: 20;
+}
+.carrito .carrito-item .btn-eliminar i{
+    pointer-events: none;
+}
+
+.carrito-total{
+    background-color: #f3f3f3;
+    padding: 30px;
+}
+.carrito-total .fila{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.carrito-total .btn-pagar{
+    display: block;
+    width: 100%;
+    border: none;
+    background: #000;
+    color: #fff;
+    border-radius: 5px;
+    font-size: 18px;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    transition: .3s;
+}
+.carrito-total .btn-pagar:hover{
+    scale: 1.05;
+}
+
+/* SECCION RESPONSIVE */
+@media screen and (max-width: 850px) {
+    .contenedor {
+      display: block;
+    }
+    .contenedor-items{
+        width: 100% !important;
+    }
+    .carrito{
+        width: 100%;
+    }
+  }
+
